--- a/assets/css/4-pages/common-styles.sass
+++ b/assets/css/4-pages/common-styles.sass
@@ -270,6 +270,13 @@
 	&.small
 		height: 90px
 
+@media screen and (max-height: 800px)
+	.separator
+		height: 120px
+
+		&.small
+			height: 70px
+
 .width-lt-980
 	.separator
 		height: 140px
@@ -354,7 +361,7 @@
 
 .cssda
 	position: absolute
-	top: 80px
+	top: 125px
 	left: 0
 	display: inline-block
 	margin-top: 60px
@@ -369,7 +376,7 @@
 
 .cssfox
 	position: absolute
-	top: 266px
+	top: 301px
 	left: -1px
 	display: block
 	z-index: 2
